# AyugeSpiderTools

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CONTRIBUTING.md  LICENSE  Makefile  README.md  README.rst  README_en.md  README_en.rst  codecov.yml  pyproject.toml  requirements.txt  requirements_dev.txt  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: codeql.yml  pre-commit.yml  publish.yml  tests-macos.yml  tests-ubuntu.yml  tests-windows.yml
artwork/: README.rst
ayugespidertools/: AyuRequest.py  AyugeCrawlSpider.py  AyugeSpider.py  DownloaderMiddlewares.py  FormatData.py  ImgOperation.py  Items.py  Middlewares.py  MongoClient.py  MongodbOrm.py  MysqlClient.py  Oss.py  Pipelines.py  ProcessManager.py  RPA.py  RunJs.py  VERSION  VerificationCode.py  __init__.py  config.py  exceptions.py  formatdata.py  imgoperation.py  items.py  middlewares.py  mongoclient.py  mongodb.py  mysqlclient.py  oss.py  pipelines.py  request.py  spiders.py  test_Oss.py  verificationcode.py
ayugespidertools/VIT/: .conf
ayugespidertools/commands/: __init__.py  crawl.py  genspider.py  startproject.py  version.py
ayugespidertools/common/: DataStructures.py  Encryption.py  Expend.py  MongoDBPipe.py  MultiPlexing.py  MysqlErrorHandle.py  Params.py  SpiderDBConf.py  SqlFormat.py  TypeVars.py  Utils.py  YiDunGap.py  __init__.py  confighandler.py  data_structures.py  encryption.py  expend.py  mongodbpipe.py  multiplexing.py  mysqlerrhandle.py  params.py  postgreserrhandle.py  spiderconf.py  spiderdbconf.py  sqlformat.py  typevars.py  utils.py  yidungap.py
ayugespidertools/data/: browsers.json
ayugespidertools/doc/: todo_list
ayugespidertools/extras/: __init__.py  cvnpil.py  deduplicate.py  ext.py  oss.py
ayugespidertools/scraper/downloadermiddlewares/headers/: ua.py
ayugespidertools/scraper/downloadermiddlewares/netlib/: aiohttplib.py
ayugespidertools/scraper/http/: __init__.py
ayugespidertools/scraper/http/request/: __init__.py  aiohttp.py  form.py
ayugespidertools/scraper/middlewares/: __init__.py
ayugespidertools/scraper/middlewares/headers/: ua.py
ayugespidertools/scraper/middlewares/netlib/: __init__.py  aiohttplib.py  requestslib.py
ayugespidertools/scraper/middlewares/proxy/: __init__.py  default.py  dynamic.py  exclusive.py  private.py
ayugespidertools/scraper/pipelines/: __init__.py
ayugespidertools/scraper/pipelines/download/: file.py  image.py
ayugespidertools/scraper/pipelines/es/: __init__.py  asynced.py  fantasy.py
ayugespidertools/scraper/pipelines/mongo/: asynced.py  fantasy.py  twisted.py
ayugespidertools/scraper/pipelines/msgproducer/: __init__.py  kafkapub.py  mqasyncpub.py  mqpub.py
ayugespidertools/scraper/pipelines/mysql/: __init__.py  asynced.py  fantasy.py  stats.py  turbo.py  twisted.py
ayugespidertools/scraper/pipelines/oracle/: __init__.py  asynced.py  fantasy.py  twisted.py
ayugespidertools/scraper/pipelines/oss/: ali.py  alimongo.py  batch.py
ayugespidertools/scraper/pipelines/postgres/: __init__.py  asynced.py  fantasy.py  twisted.py
ayugespidertools/scraper/spiders/: __init__.py  crawl.py  rabbitmq.py
ayugespidertools/templates/project/: .gitignore  README.md  scrapy.cfg
ayugespidertools/templates/spiders/: async.tmpl  basic.tmpl  crawl.tmpl  csvfeed.tmpl  task.tmpl  xmlfeed.tmpl
ayugespidertools/utils/: cmdline.py  database.py
docs/: conf.py  environment.yml  index.rst  requirements.txt
docs/additional/: bug_reporting.md  bug_reporting.rst  contribute.md  contributing.md  contributing.rst  documentation.md  documentation.rst  donating.md  donating.rst  news.md  news.rst
docs/diy/: myself.md  myself.rst  mytemplate.md  mytemplate.rst
docs/intro/: examples.md  examples.rst  install.md  install.rst  overview.md  overview.rst  tutorial.md  tutorial.rst
docs/topics/: commands.md  commands.rst  configuration.md  configuration.rst  deduplicate.rst  downloader-middleware.md  downloader-middleware.rst  items.md  items.rst  loaders.md  loaders.rst  logging.md  logging.rst  pipelines.md  pipelines.rst  rabbitspider.rst  settings.md  settings.rst
examples/: README.rst
test/: once.py  test_AyuRequest.py  test_FormatData.py  test_ImgOperation.py  test_MongoClient.py  test_Mongodb.py  test_MysqlClient.py  test_Oss.py  test_RunJs.py  test_SqlFormat.py  test_VerificationCode.py  test_ayugespidertools.py  test_common_MultiPlexing.py
test/doc/js/: add.js
tests/: __init__.py  config.py  conftest.py  defaultcfg.py  mockserver.py  spiders.py  test_AyuRequest.py  test_AyugeSpider.py  test_Encryption.py  test_Expend.py  test_FormatData.py  test_ImgOperation.py  test_Items.py  test_MongoClient.py  test_Mongodb.py  test_MongodbOrm.py  test_MysqlClient.py  test_Oss.py  test_RPA.py  test_RunJs.py  test_SqlFormat.py  test_Utils.py  test_VerificationCode.py  test_common_Utils.py  test_crawl.py  test_encryption.py  test_expend.py  test_formatdata.py  test_imgoperation.py  test_items.py  test_mongoclient.py  test_mysqlclient.py  test_oss.py  test_request.py  test_rpa.py  test_runjs.py  test_spider.py  test_sqlformat.py  test_verificationcode.py
tests/VIT/: .conf_example
tests/docs/js/: node_canvas_demo1.js  node_canvas_demo2.js
tests/docs/json/: _test_article_info_table.json
tests/docs/keys/: localhost.gen.README
tests/docs/sqlfile/: _test_article_info_table.sql
tests/docs/txt/: baidu_pagesource.html  doc_with_table.html
tests/keys/: __init__.py  localhost.gen.README
tests/test_commands/: test_commands_crawl.py  test_commands_genspider.py  test_commands_startproject.py  test_commands_version.py
tests/test_common/: test_common_MongoDBPipe.py  test_common_MultiPlexing.py  test_common_Utils.py  test_common_expend.py  test_common_mongodbpipe.py  test_common_multiplexing.py  test_common_typevars.py  test_common_utils.py
tests/test_config/DemoSpider/: scrapy.cfg  test_config.py
tests/test_extras/: test_extras_cvnpil.py  test_extras_oss.py
tests/test_utils/: test_utils_database.py
tests/utils/: testproc.py
(+11 files in other folders)
